# festival-api

./: .example.env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  backend.Dockerfile  crates.js  docker-compose.yml  index.html  initalize_server.sh  openapi.oas.yml  openapi: '3.0.0'.oas.yml  readme.md  search-index.js  settings.html  source-files.js
.github/: codecov.yml
.github/workflows/: clippy.yml  docs.yml  redoc.yml  rustfmt.yml  tarpaulin.yml  test.yml
benches/: benchmark_cached.yml  benchmark_cached_convert.yml  benchmark_realistic.yml  benchmark_unique.yml  wordlist.csv
cache/: all.html  index.html
cache_manager/: all.html  enum.CacheAction.html  index.html  sidebar-items.js  struct.Cache.html  struct.CacheManager.html
config/: all.html  enum.PathType.html  general.toml  index.html  langs.toml  sidebar-items.js  struct.Config.html  users.toml
config/config/: enum.PathType.html
converter/: all.html  enum.ConversionError.html  index.html  sidebar-items.js  struct.Converter.html  struct.Ffmpeg.html  trait.ConverterSubprocess.html
converter/converter/: enum.ConversionError.html  struct.Converter.html  trait.ConverterSubprocess.html
converter/ffmpeg/: struct.Ffmpeg.html
docker-base/: Dockerfile  readme.md
docs/: index.html
festival_api/: all.html  constant.API_NAME.html  constant.CACHE_PATH.html  constant.MAX_REQUESTS_ACC_THRESHOLD.html  constant.MAX_REQUEST_TIME_PERIOD_MINUTES.html  constant.SPEED_MAX_VAL.html  constant.SPEED_MIN_VAL.html  constant.WORD_LENGTH_LIMIT.html  final.html  fn.convert.html  fn.create.html  fn.docs.html  fn.index.html  fn.login.html  fn.main.html  fn.rocket.html  index.html  sidebar-items.js  struct.ALLOWED_FORMATS.html  struct.API_NAME.html  struct.CACHE_PATH.html  struct.DbConn.html  struct.JWT_EXPIRY_TIME_HOURS.html  struct.JWT_SECRET.html  struct.MAX_REQUESTS_ACC_THRESHOLD.html  struct.MAX_REQUESTS_TIME_PERIOD_MINUTES.html  struct.SPEED_MAX_VAL.html  struct.SPEED_MIN_VAL.html  struct.SUPPORTED_FORMATS.html  struct.SUPPORTED_LANGS.html  struct.TEMP_PATH.html  struct.WORD_LENGTH_LIMIT.html
festival_api/cache/: constant.BYTES_IN_MB.html  index.html  sidebar-items.js  struct.Cache.html  struct.Info.html  trait.Cachable.html
festival_api/common/: enum.SearchItem.html  fn.compare_hashed_strings.html  fn.find_user_in_db.html  fn.generate_random_alphanumeric.html  fn.get_time_since.html  fn.hash_string_with_salt.html  fn.is_user_timed_out.html  fn.load_recent_requests.html  fn.log_request.html  fn.sha_512_hash.html  fn.update_user_last_seen.html  index.html  sidebar-items.js
festival_api/macros/: index.html  macro.failure.html  macro.load_env!.html  macro.load_env.html  macro.reject.html  sidebar-items.js
festival_api/models/: fn._impl_insertable_for_newgenerationrequest.html  fn._impl_insertable_for_usercredentials.html  fn._impl_queryable_by_name_for_generationrequest.html  fn._impl_queryable_by_name_for_user.html  fn._impl_queryable_for_generationrequest.html  fn._impl_queryable_for_user.html  index.html  sidebar-items.js  struct.Claims.html  struct.GenerationRequest.html  struct.Language.html  struct.NewGenerationRequest.html  struct.PhrasePackage.html  struct.User.html  struct.UserCredentials.html
festival_api/response/: index.html  (+3 more)
festvox/: all.html  enum.FliteError.html  index.html  sidebar-items.js  struct.Flite.html  trait.TtsGenerator.html
macros/: all.html  index.html  macro.failure!.html  macro.failure.html  macro.reject!.html  macro.reject.html
proc_macros/: all.html  index.html
response/: all.html  enum.Response.html  index.html  sidebar-items.js  struct.Data.html
src/: cache.rs  common.rs  config.rs  macros.rs  main.rs  models.rs  response.rs  schema.rs
src/lib/cache_manager/: Cargo.toml
src/lib/cache_manager/src/: lib.rs
tests/: common.rs  endpoint_account.rs  endpoint_conversion.rs  endpoint_general.rs
utils/: all.html  fn.generate_random_alphanumeric.html  fn.sha_256_hash.html  index.html  sidebar-items.js
(+192 files in other folders)
