[package]
name = "festival-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "src/lib/festvox/",
    "src/lib/response/",
    "src/lib/config/",
]

[dependencies]
festvox = { path = "src/lib/festvox/" }
response = { path = "src/lib/response/" }
config = { path = "src/lib/config/" }

rocket = {version = "0.5.0-rc.1", features=["json"]}
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] } 
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
argon2 = { version = "0.3.1", features = ["alloc"] }
jsonwebtoken = { version = "7.2.0" }
chrono = { version = "0.4.19", features = ["serde"] }
rand = { version = "0.8.4" }
sha2 = "0.9.8"

[dev-dependencies]
futures = { version = "0.3.17" }
serde_json = "1.0.64"