[package]
name = "festival-api"
description = "A Rocket powered api which converts text to speech utilising festival."
edition = "2018"
authors = ["Josiah Bull <jbul738@aucklanduni.ac.nz>, Nasser Giacaman <n.giacaman@auckland.ac.nz>"]
version = "0.3.0"
license = "MIT or Apache-2.0"
readme = "readme.md"

[workspace]
members = [
    "src/lib/festvox/",
    "src/lib/response/",
    "src/lib/config/",
    "src/lib/utils/",
    "src/lib/macros/",
    "src/lib/converter/",
    "src/lib/cache_manager/",
]

[dependencies]
festvox = { path = "src/lib/festvox/" }
response = { path = "src/lib/response/" }
config = { path = "src/lib/config/" }
macros = { path = "src/lib/macros/" }
converter = { path = "src/lib/converter/" }
cache_manager = { path = "src/lib/cache_manager/" }

rocket = {version = "0.5.0-rc.1", features=["json"]}
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] } 
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
argon2 = { version = "0.3.1", features = ["alloc"] }
jsonwebtoken = { version = "7.2.0" }
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
futures = { version = "0.3.17" }
serde_json = "1.0.64"
utils = { path = "src/lib/utils/" }

[lib]
name = "festival_api"
path = "src/main.rs"