[package]
name = "cache_manager"
version = "0.1.0"
edition = "2018"
authors = ["Josiah Bull <jbul738@aucklanduni.ac.nz>, Nasser Giacaman <n.giacaman@auckland.ac.nz>"]
license = "MIT or Apache-2.0"

[dependencies]
config = { path = "../config" }
rocket = { version = "0.5.0-rc.1" }
priority-queue = "1.2.1"
hex = "0.4.3"

[dev-dependencies]
utils = { path = "../utils" }